--- a/folioreader/res/values/strings.xml
+++ b/folioreader/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="less_than_minute">Less than a minute ·&#160;</string>
 
     <string name="copied">Copied</string>
+    <string name="content_copy_restrict">Copying content is prohibited</string>
+    <string name="content_share_restrict">Content sharing is prohibited</string>
     <string name="send_to">Send to</string>
 
     <string name="copy">Copy</string>
